# computational_intelligence_lab

./: .gitignore  Pipfile  README.md  pyproject.toml
lab01_set_covering/: README.md  lab01.py
lab1/: README.md
lab1_set_covering/: lab01.py
lab2/: README.md  lab2.py
lab3/: README.md  lab3.ipynb  lab3.py
