[tool.poetry]
name = "computational-intelligence-lab"
version = "0.1.0"
description = "Computational Intelligence Laboratory"
authors = ["LucaBalduzzi <baldovino.1998@gmail.com>"]
readme = "README.md"
packages = [{include = "computational_intelligence_lab"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
